# docs

./: .gitignore  AEVOLI_INTEGRATION.md  AGENT_FLOW_ARCHITECTURE.md  API_KEY_MANAGEMENT.md  ARCHI.md  COMPLEXITY.md  EVENT_DRIVEN_ARCHITECTURE_IMPLEMENTATION.md  FLOW_EXECUTION_ARCHITECTURE.md  FRONTEND_FIX_NEEDED.md  LIVEKIT_SIP_CALL_CONTROL.md  LIVEKIT_STABILITY_FIXES.md  LOGTO_AUTHENTICATION.md  MEMORY_PERSISTENCE_SUMMARY.md  MULTI_TENANCY_ARCHITECTURE.md  Makefile  PERFORMANCE_OPTIMIZATIONS.md  PROVIDER_SYSTEM.md  QUICK_START.md  README_PROVIDERS.md  SANDBOXED_TOOLS.md  SIP_SETUP.md  SMART_FLOW_ARCHITECTURE.md  STREAMING_IMPLEMENTATION.md  SUPER_ADMIN_SETUP.md  TELEPHONY_COMPLETE_FIX_PLAN.md  TELEPHONY_FIX_PLAN.md  TELEPHONY_UX_CONCEPT.md  TOOL_EXECUTION_ARCHITECTURE.md  TOOL_EXECUTION_FRONTEND.md  TTS_AUDIO_MODE_ANALYSIS.md  TTS_FIX_SUMMARY.md  docs.json  introduction.mdx  mint.json  package.json
api/: openapi.json
architecture/: ARCHIVAL_SYSTEM.md  EXECUTION_STRATEGY_DESIGN.md  LLM_VALIDATION_IMPLEMENTATION.md  LLM_VALIDATION_STRATEGY.md  PHASE_1_IMPLEMENTATION_SUMMARY.md  TODO.md
connectors/: introduction.mdx  quickstart.mdx
connectors/brunkhorst/: overview.mdx
platform/: architecture.mdx  concepts.mdx  deployment.mdx  flows.mdx  overview.mdx  providers.mdx  security.mdx  sizing.mdx
prompts/: AGENT_WORKFLOW.md  AUDIO_OPTIMIZATION.md  FLOW_DESIGN_PATTERNS.md  MEMORY_DESIGN.md  TOKEN_OPTIMIZATION.md  VARIABLE_HANDLING.md  flow-loop.md  reit-flow-testing-guide.md
reference/PlanSo/: .envrc  .gitignore  pyproject.toml  pyrightconfig.json  tool.py
(+17 files in other folders)
