[project]
name = "aico-tts"
version = "0.1.0"
description = "AICO TTS Server"
requires-python = ">=3.11"
dependencies = [
    "requests",
    "beautifulsoup4",
    "rich"
]

[project.optional-dependencies]
dev = ["pyright", "ruff"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["server"]

[tool.ruff]
line-length = 120
target-version = "py311"
